syntax = "proto3";

package main;

option go_package = "./apiwalletcreatorserver";

//export PATH="$PATH:$(go env GOPATH)/bin"
/*protoc --go_out=. --go_opt=paths=source_relative \
--go-grpc_out=. --go-grpc_opt=paths=source_relative \
proto/walletcreator.proto*/

// === API METHODS
service WalletCreator {
  rpc NewWallet (WalletCreatorRequest) returns (WalletCreatorResponse) {}
}
// === API METHODS

// === TYPES
message WalletCreatorRequest {
  string user_name = 1;
}

message WalletCreatorResponse {
  string wallet_addr = 1;
  string private_key = 2;
}
